--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/joemogy/employee-Traker-Cli-DB#readme",
   "dependencies": {
+    "chalk": "^4.1.1",
     "console.table": "^0.10.0",
+    "figlet": "^1.5.0",
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
   }
