--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Joseph Mogavero",
   "license": "ISC",
   "dependencies": {
     "console.table": "^0.10.0",
